--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </section>
 
-    <section class="container secundario">
+    <section class="container secundario mobile__container">
         <div class="container__descricao">
             <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos
                 de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
